--- a/Ecommerce/EcommerceUI/package.json
+++ b/Ecommerce/EcommerceUI/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "angular-carousel": "^1.1.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.4.1",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-owl-carousel-o": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
