changing gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 Ecommerce/EcommerceBetaAPI/.vs
 Ecommerce/EcommerceBetaAPI/EcommerceBetaAPI/bin
 Ecommerce/EcommerceBetaAPI/EcommerceBetaAPI/obj
+Ecommerce/EcommerceBetaAPI/EcommerceUI/.vscode
+.vs
+.vscode
