Adding WIshlist page UI

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Ecommerce/EcommerceBetaAPI/EcommerceBetaAPI/obj
 Ecommerce/EcommerceBetaAPI/EcommerceUI/.vscode
 .vs
 .vscode
+.vs/EcommerceBeta/v17/.suo
+.vs/slnx.sqlite
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/EcommerceBeta/v17/.suo
