--- a/Ecommerce/EcommerceUI/package.json
+++ b/Ecommerce/EcommerceUI/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
